[gd_scene load_steps=3 format=3 uid="uid://b2x2stttvxdtn"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_txoaq"]
[ext_resource type="Theme" uid="uid://hhpmuodgunsr" path="res://assets/card.tres" id="2_gjccs"]

[node name="main_menu" type="Node2D"]
script = ExtResource("1_txoaq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -400.0
offset_right = 280.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_gjccs")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Control4" type="Control" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Button" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
text = "Start game"
icon_alignment = 1
expand_icon = true

[node name="Control" type="Control" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button2" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
text = "Card test"

[node name="Control2" type="Control" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button3" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
text = "exit"

[node name="Control3" type="Control" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -31.0
offset_top = -39.0
offset_right = 1954.0
offset_bottom = 1095.0
color = Color(0, 0, 0, 1)

[connection signal="button_down" from="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_up" from="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/Button3" to="." method="_on_button_3_button_up"]
